name:                ice-cream-privacy
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
author:              Samuel GeÌlineau
maintainer:          gelisam+github@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ice-cream-privacy
  main-is:             Main.hs
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -W -Wall
